--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -10,6 +10,8 @@
     <link href="content/css/font-awesome.min.css" rel="stylesheet" />
     <link href="content/css/social-buttons.css" rel="stylesheet" />
     <link href="content/css/animation.css" rel="stylesheet" />
+    <!--<link rel="stylesheet/less" type="text/css" href="content/less/animations.less" />-->
+    <link href="content/css/animations.css" rel="stylesheet"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
@@ -23,7 +25,7 @@
     </video>
     <div  data-ng-controller="indexController" role="navigation">
 
-        <!--<!--Header-->
+        <!--Header-->
         <div ng-include src="'/app/views/header.html'"></div>
 
         <!--Content-->
@@ -52,6 +54,9 @@
     <script src="scripts/angular-animate.min.js"></script>
     <script src="scripts/metro.min.js"></script>
 <!--<script src="scripts/angular-ui-router.min.js"></script>-->
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>-->
+<script src="scripts/css3-animate-it.js"></script>
+
 
     <!-- Load app main script -->
     <script src="app/app.js?v=2"></script>
@@ -97,7 +102,6 @@
                 $('.menu').removeClass('fixed');
             }
         });
-
     </script>
 </body>
 </html>
