--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -12,6 +12,7 @@
     <link href="content/css/animation.css" rel="stylesheet" />
     <link href="content/css/animations.css" rel="stylesheet"/>
 
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body data-ng-app="webBellwether" data-ng-controller="translationController">
@@ -22,7 +23,7 @@
         <source src="/appData/videos/CloudFly.mp4" type="video/mp4">
 
     </video>
-    <div  data-ng-controller="indexController" role="navigation">
+    <div data-ng-controller="indexController" role="navigation">
 
         <!--Header-->
         <div ng-include src="'/app/views/header.html'"></div>
@@ -84,7 +85,9 @@
     <script src="app/controllers/guideController.js"></script>
     <script src="app/controllers/jokesController.js"></script>
     <script src="app/controllers/photoGalleryController.js"></script>
+
     <!-- Load custom filters -->
+    <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
 
 
