edition of the game, adding new translation to existing games

--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -31,7 +31,7 @@
 
         <!--Content-->
         <div class="container">
-            <div id="myView" class="page page-slideInRight" ng-view fix-position-absolute></div>
+            <div id="myView" class="page page-rotateFall" ng-view fix-position-absolute></div>
         </div>
 
         <!--Footer-->
@@ -86,7 +86,7 @@
     <script src="app/controllers/guideController.js"></script>
     <script src="app/controllers/jokesController.js"></script>
     <script src="app/controllers/photoGalleryController.js"></script>
-
+    <script src="app/controllers/managementIntegrationGamesController.js"></script>
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
