small bug fixes

--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <!--Footer-->
-        <div>
+        <div style="margin-top: 50px;">
             <div ng-include src="'/app/views/footer.html'"></div>
         </div>
     </div>
