new structure in web part of project . Before big reforge on api  part

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -34,7 +34,7 @@
                             <li>
                                 <a href="" class="dropdown-toggle">{{translation.ManagementGames}}</a>
                                 <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="#/newGame">{{translation.AddGame}}</a></li>
+                                    <li><a href="#/newGameManagement">{{translation.AddGame}}</a></li>
                                     <li><a href="#/managementIntegrationGames">{{translation.GamesEdition}}</a></li>
                                     <li><a href="#/editGameFeatures">{{translation.ManagementIntegrationGameFeatures}}</a></li>
                                 </ul>
