--- a/WebBellwether.Web/app/integrationGames/newGameManagement.html
+++ b/WebBellwether.Web/app/integrationGames/newGameManagement.html
@@ -28,7 +28,7 @@
                 <!--GAME DESCRIPTION-->
                 <textarea style="margin-top: 20px" class="form-control" rows="10" required data-ng-model="gameModel.gameDetails" placeholder={{translation.GameDetails}}></textarea>
 
-                <!--code below is f...-->
+                <!--code below is f... destrony and create new system-->
                 <!--GAME FEATURES-->
                 <div ng-repeat="featureDetail in featuresToFilter() | filter:filterFeatures" class="formAni">
                     <label ng-hide="featureDetail.gameFeatureId != 1">
