--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -22,8 +22,8 @@
                     <li data-flexorderorigin="1" data-flexorder="2" class="">
                         <a style="text-decoration: none; color:crimson" href="" class="dropdown-toggle"><span class="mif-bubble mif-ani-float"></span>{{translation.Language}}</a>
                         <ul class="d-menu" data-role="dropdown">
-                            <li ng-repeat="language in languages">
-                                <a ng-class="{true : 'mif-checkmark',false: ''}[language.id==selectedLanguage] " href="" ng-model="language.id" ng-click="translate(language.id)">{{language.languageName}}</a>
+                            <li ng-repeat="language in languages">                                
+                                <a ng-class="{true : 'mif-checkmark',false: ''}[language.id==selectedLanguage]" href="" ng-model="language.id" ng-click="translate(language.id)"><span ng-class="{true : 'myMarginLeft3px',false: ''}[language.id==selectedLanguage]" class={{language.languageFlag}}></span> {{language.languageName}}</a>
                             </li>
                         </ul>
                     </li>                 
