--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -12,6 +12,7 @@
     <link href="content/css/social-buttons.css" rel="stylesheet" />
     <link href="content/css/animation.css" rel="stylesheet" />
     <link href="content/css/animations.css" rel="stylesheet" />
+    <link href="content/css/flag-icon.min.css" rel="stylesheet"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
