--- a/WebBellwether.Web/app/integrationGames/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/integrationGames/managementIntegrationGames.html
@@ -9,14 +9,14 @@
                 <!--GAME FEATURES-->
                 <div ng-repeat="feature in gameFeatures">
                     <label>{{feature.gameFeatureName}}</label>    
-                    <select class="form-control myFormColor" required data-ng-model="selectedGame.integrationGameDetailModels[$index].id" data-ng-options="gfdm.id as gfdm.gameFeatureDetailName for gfdm in feature.gameFeatureDetailModels">
+                    <select class="form-control myFormColor" required data-ng-model="selectedGame.integrationGameDetailModels[$index].gameFeatureDetailId" data-ng-options="gfdm.gameFeatureDetailId as gfdm.gameFeatureDetailName for gfdm in feature.gameFeatureDetailModels">
                         <option value=''>{{translation.PleaseSelectGame}}</option>
                     </select>
                 </div>               
 
                 <!--SAVE GAME-->
                 <div style="text-align: center">
-                    <button class="btn btn-success btn-block" type="submit" ng-click="saveGame(selectedGame)" ng-disabled="saveGame.$invalid"><span class="mif-checkmark"></span> {{translation.SaveGame}}</button>
+                    <button class="btn btn-success btn-block" type="submit" ng-click="editGame(selectedGame)" ng-disabled="saveGame.$invalid"><span class="mif-checkmark"></span> {{translation.SaveGame}}</button>
                 </div>
 
                 <!--DELETE GAME-->
@@ -59,6 +59,14 @@
                 </ul>
             </nav>
         </div>
+    </div>
+    <div data-role="dialog" id="dialog3" class="text-center dialog success" data-close-button="true" data-type="success">
+        <h1>Simple dialog</h1>
+        <p>
+            Dialog :: Metro UI CSS - The front-end framework for developing projects on the web in Windows Metro Style
+        </p>
+        <span class="dialog-close-button"></span>
+
     </div>
 </div>
 
