rebuid user notification on new game , edit game features , fix small css problem on navbar

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -32,7 +32,7 @@
                         <a style="text-decoration: none;" href="" class="dropdown-toggle"><span class="mif-wrench mif-ani-spanner"></span>{{translation.Tools}}</a>
                         <ul class="d-menu" data-role="dropdown" style="display: none;">
                             <li>
-                                <a href="" class="dropdown-toggle">{{translation.ManagementGames}}</a>
+                                <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementGames}}</a>
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="#/newGameManagement">{{translation.AddGame}}</a></li>
                                     <li><a href="#/managementIntegrationGames">{{translation.GamesEdition}}</a></li>
@@ -40,7 +40,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="" class="dropdown-toggle">{{translation.ManagementJokes}}</a>
+                                <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementJokes}}</a>
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="">{{translation.AddJoke}}</a></li>
                                     <li><a href="">{{translation.JokesEdition}}</a></li>
@@ -48,7 +48,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="" class="dropdown-toggle">{{translation.ManagementLanguages}}</a>
+                                <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementLanguages}}</a>
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="">{{translation.AddLanguage}}</a></li>
                                     <li><a href="">{{translation.LanguagesEdition}}</a></li>
